# the-lamp-that-shines

./: .gitignore  CMakeLists.txt  README.md  dmx.pio  full_speed.pio  main.c  main.h
libs/: CMakeLists.txt  dmx_lib.c  dmx_lib.h  temp_lib.c  temp_lib.h  utils.c  utils.h
